--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic/storage": "^2.3.1",
     "cordova-android": "^8.1.0",
     "cordova-plugin-camera": "^4.1.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.5",
     "sweetalert2": "^10.9.0",
     "tslib": "^2.0.0",
