--- a/package.json
+++ b/package.json
@@ -13,22 +13,31 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~10.0.0",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@angular/service-worker": "~10.0.0",
+    "@capacitor/cli": "^2.4.5",
+    "@capacitor/core": "^2.4.5",
     "@ionic-native/camera": "^5.28.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/network": "^5.22.0-beta-1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^3.0.2",
     "@ionic/storage": "^2.3.1",
+    "@logisticinfotech/ionic4-datepicker": "^1.4.4",
+    "animate.css": "^4.1.1",
     "cordova-android": "^8.1.0",
     "cordova-plugin-camera": "^4.1.0",
+    "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.5",
     "sweetalert2": "^10.9.0",
